--- a/css/custom.css
+++ b/css/custom.css
@@ -44,8 +44,8 @@
 	--secondary-color			: #F9F5FB;
 	--bg-color					: #FFFFFF;
 	--text-color				: #333333;
-	--accent-color				: #654EA3;
-	--accent-secondary-color	: #EAAFC8;
+	--accent-color				: #f65402;
+	--accent-secondary-color	: #f65402;
 	--white-color				: #FFFFFF;
 	--divider-color				: #14121A1A;
 	--dark-divider-color		: #FFFFFF1A;
